--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@subql/client",
+  "name": "@subql/network-client",
   "version": "0.1.0",
   "description": "Clinet sdks for Subquery Network",
   "scripts": {
