--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@subql/ipfs-client",
+  "name": "@subql/react-hooks",
   "version": "0.1.0",
-  "description": "SubQuery client sdk for IPFS",
+  "description": "SubQuery client sdk for react hooks",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
@@ -9,11 +9,14 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "ipfs-http-client": "^57.0.1"
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
+  },
+  "peerDependencies": {
+    "react": "^17"
   },
   "stableVersion": "0.1.0"
 }
