--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,7 @@
   },
   "plugins": ["@typescript-eslint/eslint-plugin", "header"],
   "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:@typescript-eslint/recommended"
   ],
   "root": true,
   "env": {
