--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "tsconfig.json",
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint/eslint-plugin", "header"],
   "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "root": true,
   "env": {
@@ -15,7 +14,7 @@
     "jest": true,
     "browser": true
   },
-  "ignorePatterns": [".eslintrc.js"],
+  "ignorePatterns": ["**/packages/**/dist/**", "/test/jest-setup.ts"],
   "rules": {
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
