--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -55,14 +55,14 @@ jobs:
         if: steps.changed-network-clients.outputs.changed == 'true'
         uses: ./.github/actions/create-prerelease
         with:
-          package-path: packages/contract
+          package-path: packages/network-clients
           npm-token: ${{ secrets.NPM_TOKEN }}
 
       - name: Bump react-hooks & deploy
         if: steps.changed-react-hooks.outputs.changed == 'true'
         uses: ./.github/actions/create-prerelease
         with:
-          package-path: packages/hooks
+          package-path: packages/react-hooks
           npm-token: ${{ secrets.NPM_TOKEN }}
 
       - name: Commit changes
