[SKIP CI] Prerelease

--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.1.0",
+  "version": "0.1.1-0",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -18,6 +18,5 @@
   },
   "peerDependencies": {
     "@subql/contract-sdk": "^0.6.1"
-  },
-  "stableVersion": "0.1.0"
+  }
 }
