--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/react-hooks",
-  "version": "0.1.0",
+  "version": "0.1.1-0",
   "description": "SubQuery client sdk for react hooks",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -17,6 +17,5 @@
   },
   "peerDependencies": {
     "react": "^17"
-  },
-  "stableVersion": "0.1.0"
+  }
 }
