--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -9,6 +9,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@acala-network/eth-providers": "^2.4.14",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
     "ipfs-http-client": "^57.0.1"
