--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -12,7 +12,8 @@
     "@acala-network/eth-providers": "^2.4.14",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
-    "ipfs-http-client": "^57.0.1"
+    "ipfs-http-client": "^57.0.1",
+    "node-fetch": "^3.2.6"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
