--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -9,10 +9,10 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
-    "ipfs-http-client": "^57.0.1",
-    "node-fetch": "^3.2.6"
+    "ipfs-http-client": "^57.0.1"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
