--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -18,6 +18,6 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.6.1-8"
+    "@subql/contract-sdk": "^0.7.0"
   }
 }
