--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
-    "ethers": "^5.6.8",
-    "ipfs-http-client": "^57.0.1"
+    "ethers": "^5.6.8"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
+    "ipfs-http-client": "^53.0.1",
     "@subql/contract-sdk": "^0.7.0"
   }
 }
