--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@subql/contract-sdk": "0.6.1-5",
+    "@subql/contract-sdk": "^0.7.0",
+    "ipfs-http-client": "^53.0.1",
     "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
