[SKIP CI] Prerelease

--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.1.1-11",
+  "version": "0.1.1-12",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -17,7 +17,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "ipfs-http-client": "^53.0.1",
-    "@subql/contract-sdk": "^0.7.0"
+    "@subql/contract-sdk": "^0.7.0",
+    "ipfs-http-client": "^53.0.1"
   }
 }
