--- a/packages/network-clients/tsconfig.json
+++ b/packages/network-clients/tsconfig.json
@@ -4,9 +4,9 @@
     "target": "es2017",
     "sourceMap": true,
     "tsBuildInfoFile": "dist/.tsbuildinfo",
+    "resolveJsonModule": true,
     "rootDir": "./src",
     "outDir": "./dist",
   },
-  "include": ["src/**/*"],
-  "exclude": ["**/*spec.ts"]
+  "include": ["src/**/*", "test/**/*"]
 }
