--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
+    "composite": false,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
     "target": "es2017",                               /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
     "module": "commonjs",                             /* Specify what module code is generated. */
@@ -19,6 +19,8 @@
     "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
     "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
     "skipLibCheck": true,                             /* Skip type checking all .d.ts files. */
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "types": ["node", "jest"],
   },
   "include": ["packages/**/*","test"],
