--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -6,14 +6,20 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
+    "codegen-gql": "apollo client:codegen --endpoint='https://api.subquery.network/sq/subquery/subquery-network-subql-project' --target=typescript --tagName=gql --useReadOnlyTypes --passthroughCustomScalars --customScalarsPrefix=GraphQL_ --outputFlat src/__generated__ --excludes src/schema.gql",
     "build": "tsc -b"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
-    "ethers": "^5.6.8"
+    "cross-fetch": "^3.1.5",
+    "ethers": "^5.6.8",
+    "graphql": "^16.5.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "apollo": "^2.34.0",
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
