--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "devDependencies": {
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.6.9",
+    "@metamask/eth-sig-util": "^4.0.1",
     "@subql/contract-sdk": "^0.10.2-22",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "axios": "^0.27.2",
     "eslint": "^8.17.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
