--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "@metamask/eth-sig-util": "4.0.1"
   },
   "devDependencies": {
     "apollo": "^2.34.0",
