--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "husky": "^8.0.1",
     "ipfs-http-client": "^53.0.1",
     "jest": "^28.1.0",
+    "jwt-decode": "^3.1.2",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
