--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
     "graphql": "^16.5.0",
+    "jwt-decode": "^3.1.2",
     "@metamask/eth-sig-util": "4.0.1"
   },
   "devDependencies": {
