Feat/subql link (#23)
* Initialise authLink

* Integrate EIP712

* Add request token in auth link

* Fix type issue

* Update pipeline

* Fix build issue

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   ],
   "devDependencies": {
     "@actions/core": "^1.9.1",
-    "@subql/contract-sdk": "^0.10.1",
+    "@apollo/client": "^3.6.9",
+    "@metamask/eth-sig-util": "^4.0.1",
+    "@subql/contract-sdk": "^0.10.2-26",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "axios": "^0.27.2",
     "eslint": "^8.17.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -28,6 +31,7 @@
     "husky": "^8.0.1",
     "ipfs-http-client": "^53.0.1",
     "jest": "^28.1.0",
+    "jwt-decode": "^3.1.2",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
     "react": "^18.1.0",
