--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@ethersproject/bignumber": "^5.7.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "cross-fetch": "^3.1.5",
