--- a/packages/apollo-links/tsconfig.json
+++ b/packages/apollo-links/tsconfig.json
@@ -5,7 +5,7 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "rootDir": "./src",
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
   "include": ["src/**/*", "test/**/*"]
 }
