--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -6,11 +6,11 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "codegen-gql": "apollo client:codegen --endpoint='https://api.subquery.network/sq/subquery/subquery-network-subql-project' --target=typescript --tagName=gql --useReadOnlyTypes --passthroughCustomScalars --customScalarsPrefix=GraphQL_ --outputFlat src/__generated__ --excludes src/schema.gql",
+    "codegen-gql": "graphql-codegen --config ./src/codegen.ts",
     "build": "yarn codegen-gql && tsc -b"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@apollo/client": "^3.4.16",
     "@ethersproject/bignumber": "^5.7.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
@@ -20,6 +20,12 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.1",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
     "apollo": "^2.34.0",
     "typescript": "^4.6.4"
   },
