clean up and update custom query functions

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@subql/network-client",
   "version": "0.1.0",
-  "description": "Clinet sdks for Subquery Network",
+  "description": "Client sdk for Subquery Network",
   "scripts": {
     "build": "yarn workspaces run build",
     "lint": "eslint . --ext .ts,.tsx",
