--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -6,11 +6,11 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "codegen-gql": "graphql-codegen --config ./src/codegen.ts",
+    "codegen-gql": "graphql-codegen --require dotenv/config --config ./src/codegen.ts",
     "build": "yarn codegen-gql && tsc -b"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.16",
+    "@apollo/client": "^3.6.9",
     "@ethersproject/bignumber": "^5.7.0",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
