--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -6,14 +6,22 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "tsc -b"
+    "codegen-gql": "graphql-codegen --require dotenv/config --config codegen.yaml",
+    "build": "yarn codegen-gql && tsc -b"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2"
+    "class-validator": "^0.13.2",
+    "graphql": "^16.5.0"
   },
   "devDependencies": {
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "@graphql-codegen/cli": "^2.13.1",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3"
   },
   "peerDependencies": {
     "react": "^17"
