--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -26,6 +26,7 @@
     "@graphql-codegen/typescript": "^2.7.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "apollo": "^2.34.0",
+    "create-ts-index": "^1.14.0",
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
