--- a/packages/network-clients/codegen.yaml
+++ b/packages/network-clients/codegen.yaml
@@ -15,19 +15,19 @@ config:
     BigInt: bigint
     Cursor: string
 generates:
-  src/types/base-types.ts:
+  src/__types__/base-types.ts:
     plugins:
       - typescript
       - typescript-operations
   src/:
     preset: near-operation-file
     presetConfig:
-      folder: ../types
+      folder: ../__types__
       extensions: .generated.ts
-      baseTypesPath: types/base-types.ts
+      baseTypesPath: __types__/base-types.ts
     plugins:
       - typescript-operations
 hooks:
   afterAllFileWrite:
     - prettier --write
-    - yarn cti create ./src/types -i base-types --withoutbackup
+    - yarn cti create ./src/__types__ -i base-types --withoutbackup
