Feat/support more queries (#33)
* migrate to graphql code generator

* move over all queries from explorer

* clean up and update custom query functions

* update endpoint to fix codegen

* update apollo client, pull endpoint from network configs

* add custom scalars

* add dotenv config

* add .env, edit .gitignore

* update codegen.yaml, eslintignore, gitignore

* add deep assert check

Co-authored-by: Lachlan McCrae <8554309+lachlan1m@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -75,10 +75,6 @@ typings/
 .yarn/install-state.gz
 .pnp.*
 
-# dotenv environment variables file
-.env
-.env.test
-
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
@@ -113,4 +109,5 @@ dist
 .DS_Store
 
 # Generated graphql types
+__types__
 __generated__
