--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -15,13 +15,14 @@
     "graphql": "^16.5.0"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
     "@graphql-codegen/cli": "^2.13.1",
     "@graphql-codegen/introspection": "^2.2.1",
     "@graphql-codegen/near-operation-file-preset": "^2.4.1",
     "@graphql-codegen/typescript": "^2.7.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.3"
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
+    "create-ts-index": "^1.14.0",
+    "typescript": "^4.6.4"
   },
   "peerDependencies": {
     "react": "^17"
