--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@ethersproject/bignumber": "^5.7.0",
+    "@subql/contract-sdk": "^0.10.2-34",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "cross-fetch": "^3.1.5",
