--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -30,7 +30,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.10.2",
+    "@subql/contract-sdk": "^0.10.2-34",
     "ipfs-http-client": "^53.0.1"
   }
 }
