--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -24,6 +24,7 @@
     "@graphql-codegen/introspection": "^2.2.1",
     "@graphql-codegen/near-operation-file-preset": "^2.4.1",
     "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "apollo": "^2.34.0",
     "create-ts-index": "^1.14.0",
