--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -10,9 +10,11 @@
     "build": "yarn codegen-gql && tsc -b"
   },
   "dependencies": {
+    "@graphql-tools/code-file-loader": "^7.3.6",
+    "@graphql-tools/graphql-tag-pluck": "^7.3.6",
+    "@graphql-tools/load": "^7.7.7",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "graphql": "^16.5.0"
+    "class-validator": "^0.13.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.1",
@@ -25,6 +27,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "react": "^17"
+    "react": "^17",
+    "graphql": "^16.5.0"
   }
 }
