--- a/packages/network-queries/package.json
+++ b/packages/network-queries/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "description": "SubQuery package containing all gql queries dapps",
   "author": "SubQuery Pte Limited",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "scripts": {
+    "build": "tsc -b"
+  }
 }
