--- a/packages/network-queries/package.json
+++ b/packages/network-queries/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-query",
-  "version": "0.1.0",
+  "version": "0.1.1-0",
   "main": "dist/index.js",
   "description": "SubQuery package containing all gql queries dapps",
   "author": "SubQuery Pte Limited",
