--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -42,9 +42,9 @@ jobs:
           paths: packages/network-clients
 
       - uses: marceloprado/has-changed-path@v1
-        id: changed-network-queries
+        id: changed-network-query
         with:
-          paths: packages/network-queries
+          paths: packages/network-query
 
       - uses: marceloprado/has-changed-path@v1
         id: changed-react-hooks
@@ -68,11 +68,11 @@ jobs:
           package-path: packages/network-clients
           npm-token: ${{ secrets.NPM_TOKEN }}
 
-      - name: Bump network-queries & deploy
-        if: steps.changed-network-queries.outputs.changed == 'true'
+      - name: Bump network-query & deploy
+        if: steps.changed-network-query.outputs.changed == 'true'
         uses: ./.github/actions/create-prerelease
         with:
-          package-path: packages/network-queries
+          package-path: packages/network-query
           npm-token: ${{ secrets.NPM_TOKEN }}
 
       - name: Bump react-hooks & deploy
