--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -6,9 +6,19 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "tsc -b"
+    "codegen-gql": "graphql-codegen --require dotenv/config --config codegen.ts",
+    "build": "yarn codegen-gql && tsc -b"    
+  },
+  "dependencies": {
+    "graphql": "^16.5.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.13.1",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.1",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
     "typescript": "^4.8.4"
   }
 }
