--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -6,8 +6,7 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "codegen-gql": "graphql-codegen --require dotenv/config --config codegen.ts",
-    "build": "yarn codegen-gql && tsc -b"
+    "build": "tsc -b"
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
@@ -21,12 +20,6 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.13.1",
-    "@graphql-codegen/introspection": "^2.2.1",
-    "@graphql-codegen/near-operation-file-preset": "^2.4.1",
-    "@graphql-codegen/typescript": "^2.7.3",
-    "@graphql-codegen/typescript-document-nodes": "^2.3.3",
-    "@graphql-codegen/typescript-operations": "^2.5.3",
     "apollo": "^2.34.0",
     "create-ts-index": "^1.14.0",
     "typescript": "^4.6.4"
