--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "devDependencies": {
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
@@ -28,6 +25,7 @@
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "flag": "^5.0.1",
+    "graphql-language-service-server": "^2.8.9",
     "husky": "^8.0.1",
     "ipfs-http-client": "^53.0.1",
     "jest": "^28.1.0",
@@ -38,7 +36,12 @@
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1"
   },
-  "packageManager": "yarn@3.1.1",
+  "workspaces": [
+    "packages/apollo-links",
+    "packages/network-query",
+    "packages/network-clients",
+    "packages/react-hooks"
+  ],
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --cache --fix",
