--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -6,13 +6,16 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "codegen-gql": "graphql-codegen --require dotenv/config --config codegen.yaml",
+    "codegen-gql": "graphql-codegen --require dotenv/config --config codegen.ts",
     "build": "yarn codegen-gql && tsc -b"
   },
   "dependencies": {
+    "@graphql-tools/code-file-loader": "^7.3.6",
+    "@graphql-tools/graphql-tag-pluck": "^7.3.6",
+    "@graphql-tools/load": "^7.7.7",
+    "@subql/network-query": "^0.1.1-0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "graphql": "^16.5.0"
+    "class-validator": "^0.13.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.13.1",
@@ -25,6 +28,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
+    "graphql": "^16.5.0",
     "react": "^17"
   }
 }
