--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "types": ["node", "jest"],
   },
   "include": ["packages/**/*","test"],
-  "exclude": ["**/node_modules/**"]
+  "exclude": ["**/node_modules/**"],
 }
