--- a/packages/react-hooks/.env
+++ b/packages/react-hooks/.env
@@ -1,2 +1,5 @@
 # KEPLER NETWORK
 KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-testnet-subql-project"
+
+# KEPLER EXCHANGE 
+KEPLER_EXCHANGE="https://api.subquery.network/sq/subquery/kepler-testnet-exchange-project"
