add ctix, fix codegen by generating base types for both schemas at once

--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "codegen-gql": "sh ./scripts/codegen.sh",
-    "build": "yarn codegen-gql && tsc -b"
+    "build": "yarn codegen-gql && yarn tsc -b"
   },
   "dependencies": {
     "graphql": "^16.5.0"
