--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -6,8 +6,8 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "codegen-gql": "graphql-codegen --require dotenv/config --config codegen.ts",
-    "build": "yarn codegen-gql && tsc -b"
+    "codegen-gql": "sh ./scripts/codegen.sh",
+    "build": "yarn codegen-gql && yarn tsc -b"
   },
   "dependencies": {
     "graphql": "^16.5.0"
@@ -19,6 +19,7 @@
     "@graphql-codegen/typescript": "^2.7.3",
     "@graphql-codegen/typescript-document-nodes": "^2.3.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   }
 }
