--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -16,8 +16,7 @@
     "buffer": "^6.0.3",
     "cross-fetch": "^3.1.5",
     "ethers": "^5.6.8",
-    "graphql": "^16.5.0",
-    "yup": "^0.32.11"
+    "graphql": "^16.5.0"
   },
   "devDependencies": {
     "apollo": "^2.34.0",
