--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
     "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.3",
     "@metamask/eth-sig-util": "^4.0.1",
     "@subql/contract-sdk": "^0.10.2-34",
     "@types/jest": "^28.1.6",
