--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -2,7 +2,7 @@
   "name": "@subql/network-query",
   "version": "0.1.1-5",
   "main": "dist/index.js",
-  "description": "SubQuery package containing all gql queries dapps",
+  "description": "SubQuery package containing all gql queries for network dapps",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
