--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "devDependencies": {
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
-    "cross-fetch": "^3.1.5",
-    "dotenv": "^16.0.3",
     "@metamask/eth-sig-util": "^4.0.1",
     "@subql/contract-sdk": "^0.10.2-34",
     "@types/jest": "^28.1.6",
@@ -23,7 +21,9 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "axios": "^0.27.2",
+    "cross-fetch": "^3.1.5",
     "ctix": "^1.5.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.17.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -50,5 +50,6 @@
       "eslint --cache --fix",
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
