--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Client sdk for Subquery Network",
   "scripts": {
-    "build": "yarn workspaces run build",
+    "build": "yarn workspaces foreach -pt run build",
     "lint": "eslint . --ext .ts,.tsx",
     "postinstall": "husky install",
     "test": "jest --passWithNoTests --testTimeout=160000"
@@ -22,7 +22,7 @@
     "@typescript-eslint/parser": "^5.27.0",
     "axios": "^0.27.2",
     "cross-fetch": "^3.1.5",
-    "ctix": "^1.5.1",
+    "ctix": "^1.5.4",
     "dotenv": "^16.0.3",
     "eslint": "^8.17.0",
     "eslint-plugin-header": "^3.1.1",
@@ -34,7 +34,7 @@
     "jest": "^28.1.0",
     "jwt-decode": "^3.1.2",
     "lint-staged": "^13.0.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "react": "^18.1.0",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1"
