--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Client sdk for Subquery Network",
   "scripts": {
-    "build": "yarn workspaces run build",
+    "build": "yarn workspaces foreach -pt run build",
     "lint": "eslint . --ext .ts,.tsx",
     "postinstall": "husky install",
     "test": "jest --passWithNoTests --testTimeout=160000"
@@ -14,8 +14,6 @@
   "devDependencies": {
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
-    "cross-fetch": "^3.1.5",
-    "dotenv": "^16.0.3",
     "@metamask/eth-sig-util": "^4.0.1",
     "@subql/contract-sdk": "^0.10.2-34",
     "@types/jest": "^28.1.6",
@@ -23,7 +21,9 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "axios": "^0.27.2",
-    "ctix": "^1.5.1",
+    "cross-fetch": "^3.1.5",
+    "ctix": "^1.5.4",
+    "dotenv": "^16.0.3",
     "eslint": "^8.17.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -34,7 +34,7 @@
     "jest": "^28.1.0",
     "jwt-decode": "^3.1.2",
     "lint-staged": "^13.0.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "react": "^18.1.0",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1"
@@ -50,5 +50,6 @@
       "eslint --cache --fix",
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
