--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -83,7 +83,7 @@ jobs:
           npm-token: ${{ secrets.NPM_TOKEN }}
 
       - name: Bump apollo-links & deploy
-        if: steps.changed-apollo-links.outputs.changed == 'true'
+        # if: steps.changed-apollo-links.outputs.changed == 'true'
         uses: ./.github/actions/create-prerelease
         with:
           package-path: packages/apollo-links
