add npmAuthToken config to yarnrc

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,4 +6,6 @@ plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
 
+npmAuthToken: "${NPM_AUTH_TOKEN:-}"
+
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
