--- a/.github/actions/create-prerelease/action.yml
+++ b/.github/actions/create-prerelease/action.yml
@@ -21,5 +21,5 @@ runs:
     - working-directory: ${{ inputs.package-path }}
       run: echo "Changes exist in ${{ inputs.package-path }}" && yarn version prerelease && yarn npm publish --access public --tag dev
       env:
-        NPM_TOKEN: ${{ inputs.npm-token }}
+        NPM_AUTH_TOKEN: ${{ inputs.npm-token }}
       shell: bash
