--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "flag": "^5.0.1",
+    "graphql": "^16.5.0",
     "graphql-language-service-server": "^2.8.9",
     "husky": "^8.0.1",
     "ipfs-http-client": "^53.0.1",
