--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -14,7 +14,6 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
-    "graphql": "^16.5.0",
     "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
@@ -22,8 +21,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.10.2-22",
-    "ipfs-http-client": "^53.0.1"
+    "graphql": "*"
   },
   "stableVersion": "0.2.1-6"
 }
