--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-query",
-  "version": "0.1.1-6",
+  "version": "0.1.1-7",
   "main": "dist/index.js",
   "description": "SubQuery package containing all gql queries for network dapps",
   "author": "SubQuery Pte Limited",
@@ -22,5 +22,6 @@
     "ctix": "^1.5.4",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
-  }
+  },
+  "stableVersion": "0.1.1-6"
 }
