--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -9,7 +9,6 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
     "@metamask/eth-sig-util": "4.0.1",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
@@ -21,6 +20,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
+    "@apollo/client": "*",
     "graphql": "*"
   },
   "stableVersion": "0.2.1-7"
