--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.2.2",
+  "version": "0.2.3-0",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -27,5 +27,5 @@
     "@subql/contract-sdk": "^0.11.1-9",
     "ipfs-http-client": "^53.0.1"
   },
-  "stableVersion": "0.2.1-21"
+  "stableVersion": "0.2.2"
 }
