--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/react-hooks",
-  "version": "0.1.2",
+  "version": "0.1.3-0",
   "description": "SubQuery client sdk for react hooks",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -33,5 +33,5 @@
     "graphql": "^16.5.0",
     "react": "^17"
   },
-  "stableVersion": "0.1.1-20"
+  "stableVersion": "0.1.2"
 }
