--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -24,7 +24,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "0.11.1-12",
+    "@subql/contract-sdk": "^0.11.1-12",
     "ipfs-http-client": "^53.0.1"
   },
   "stableVersion": "0.2.3-0"
