--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.2.3-2",
+  "version": "0.3.0",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
