--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-query",
-  "version": "0.1.3-1",
+  "version": "0.3.0",
   "main": "dist/index.js",
   "description": "SubQuery package containing all gql queries for network dapps",
   "author": "SubQuery Pte Limited",
