--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.2.3-2",
+  "version": "0.3.0",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -24,7 +24,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.11.1-12",
+    "@subql/contract-sdk": "^0.12.1-2",
     "ipfs-http-client": "^53.0.1"
   },
   "stableVersion": "0.2.3-1"
