--- a/packages/network-clients/.env
+++ b/packages/network-clients/.env
@@ -1,6 +1,6 @@
 # KEPLER NETWORK
-KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-testnet-subql-project"
-KEPLER_RPC="https://moonbeam-alpha.api.onfinality.io/public"
+KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-subquery-project-mumbai"
+KEPLER_RPC="https://rpc-mumbai.maticvigil.com/"
 
 # TESTNET NETWORK
 TESTNET_SUBQL="https://api.subquery.network/sq/subquery/subquery-network-subql-project"
