--- a/packages/network-clients/.env
+++ b/packages/network-clients/.env
@@ -1,10 +1,10 @@
 # KEPLER NETWORK
-KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-subquery-project-mumbai"
-KEPLER_RPC="https://rpc-mumbai.maticvigil.com/"
+KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-testnet-subql-project"
+KEPLER_RPC="https://moonbeam-alpha.api.onfinality.io/public"
 
 # TESTNET NETWORK
-TESTNET_SUBQL="https://api.subquery.network/sq/subquery/subquery-network-subql-project"
-TESTNET_RPC="https://acala-mandala-adapter.api.onfinality.io/public"
+TESTNET_SUBQL="https://api.subquery.network/sq/subquery/kepler-subquery-project-mumbai"
+TESTNET_RPC="https://rpc-mumbai.maticvigil.com/"
 
 # IPFS 
-DEFAULT_IFPS_URL="https://interipfs.thechaindata.com/ipfs/api/v0"
+DEFAULT_IFPS_URL="https://unauthipfs.subquery.network/ipfs/api/v0"
