Upgrade contract sdk to latest version

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
     "@metamask/eth-sig-util": "^4.0.1",
-    "@subql/contract-sdk": "0.12.1-5",
+    "@subql/contract-sdk": "^0.12.3-0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
