--- a/packages/network-clients/.env
+++ b/packages/network-clients/.env
@@ -1,10 +1,10 @@
 # KEPLER NETWORK
-KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-testnet-subql-project"
-KEPLER_RPC="https://moonbeam-alpha.api.onfinality.io/public"
+KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-subquery-project-mumbai"
+KEPLER_RPC="https://polygon-mumbai.infura.io/v3/4458cf4d1689497b9a38b1d6bbf05e78"
 
 # TESTNET NETWORK
-TESTNET_SUBQL="https://api.subquery.network/sq/subquery/subquery-network-subql-project"
-TESTNET_RPC="https://acala-mandala-adapter.api.onfinality.io/public"
+TESTNET_SUBQL="https://api.subquery.network/sq/subquery/kepler-subquery-project-mumbai"
+TESTNET_RPC="https://polygon-mumbai.infura.io/v3/4458cf4d1689497b9a38b1d6bbf05e78"
 
 # IPFS 
 DEFAULT_IFPS_URL="https://interipfs.thechaindata.com/ipfs/api/v0"
