leaderboard query and GetPlans_plans_nodes fragment

--- a/packages/network-query/.env
+++ b/packages/network-query/.env
@@ -3,3 +3,6 @@ KEPLER_SUBQL="https://api.subquery.network/sq/subquery/kepler-subquery-project-m
 
 # KEPLER EXCHANGE 
 KEPLER_EXCHANGE="https://api.subquery.network/sq/subquery/kepler-exchange-project-mumbai"
+
+# KEPLER LEADERBOARD
+KEPLER_LEADERBOARD="https://leaderboard-api.thechaindata.com/graphql"
