Create new package `@subql/network-config`

--- a/packages/network-config/tsconfig.json
+++ b/packages/network-config/tsconfig.json
@@ -7,5 +7,5 @@
     "rootDir": "./src",
     "outDir": "./dist"
   },
-  "include": ["src/**/*", "test/**/*", "../network-config/constants.ts", "../network-config/config.ts"]
+  "include": ["src/**/*", "test/**/*"]
 }
