--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ts-node": "^10.8.1"
   },
   "workspaces": [
+    "packages/network-config",
     "packages/network-query",
     "packages/apollo-links",
     "packages/network-clients",
