--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.0",
     "@ethersproject/bignumber": "^5.7.0",
+    "@subql/network-config": "workspace:*",
     "@subql/network-query": "workspace:*",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
